# Separ

./: .env.example  .gitignore  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker.yml  release.yml
config/: default.toml
crates/separ-api/: Cargo.toml
crates/separ-api/src/: dto.rs  lib.rs  middleware.rs  password.rs  routes.rs  state.rs  validation.rs
crates/separ-api/src/handlers/: api_keys.rs  applications.rs  audit.rs  auth.rs  authz.rs  azure_sas.rs  health.rs  identity.rs  mod.rs  oauth.rs  permissions.rs  resource_grants.rs  storage_connections.rs  sync.rs  tenants.rs  users.rs  workspaces.rs
crates/separ-core/: Cargo.toml
crates/separ-core/src/: error.rs  identity.rs  ids.rs  lib.rs  models.rs  storage_connection.rs  tests.rs  traits.rs
crates/separ-db/: Cargo.toml
crates/separ-db/migrations/: 20250101000001_initial_schema.sql  20250101000002_identity_providers.sql  20260104000001_user_credentials.sql  20260120000001_workspace_first_model.sql  20260120000002_unique_email_global.sql  20260121000001_api_keys.sql  20260131000001_storage_connections.sql  20260208000001_workspace_data_scoping.sql  20260209000001_workspace_invitations.sql  20260209000002_simplify_workspace_types.sql  20260211000001_resource_grants.sql
crates/separ-db/src/: lib.rs  migrations.rs  pool.rs
crates/separ-db/src/repositories/: api_key.rs  application.rs  audit.rs  group.rs  mod.rs  oauth.rs  storage_connection.rs  sync.rs  tenant.rs  user.rs  workspace.rs
crates/separ-identity/: Cargo.toml
crates/separ-identity/src/: lib.rs  registry.rs  sync.rs  tests.rs
crates/separ-identity/src/providers/: azure.rs  common.rs  google.rs  ldap.rs  mod.rs  oidc.rs  okta.rs
crates/separ-oauth/: Cargo.toml
crates/separ-oauth/src/: handler.rs  jwt.rs  lib.rs  providers.rs
crates/separ-proxy/: Cargo.toml
crates/separ-proxy/src/: auth.rs  config.rs  connection.rs  lib.rs  protocol.rs  proxy.rs  tests.rs
crates/separ-server/: Cargo.toml
crates/separ-server/src/: config.rs  main.rs
crates/separ-spicedb/: Cargo.toml  build.rs
crates/separ-spicedb/proto/authzed/api/v1/: core.proto  permission_service.proto  schema_service.proto  watch_service.proto
crates/separ-spicedb/proto/google/protobuf/: struct.proto  timestamp.proto
crates/separ-spicedb/src/: cached_client.rs  client.rs  lib.rs  schema.rs  service.rs  tests.rs
crates/separ-sync/: Cargo.toml
crates/separ-sync/src/: lib.rs  scim.rs  service.rs  webhook.rs
helm/separ/: Chart.yaml  values-production.yaml  values.yaml
helm/separ/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  networkpolicy.yaml  pdb.yaml  secret-provider-class.yaml  secrets.yaml  service.yaml  serviceaccount.yaml  spicedb-deployment.yaml  spicedb-service.yaml
scripts/: validate-spicedb.sh
spicedb/: schema.zed
spicedb/validations/: workspace-first-model.yaml
tests/: integration_tests.rs  spicedb_assertions.yaml
