[workspace]
resolver = "2"
members = [
    "crates/separ-core",
    "crates/separ-spicedb",
    "crates/separ-db",
    "crates/separ-sync",
    "crates/separ-oauth",
    "crates/separ-identity",
    "crates/separ-proxy",
    "crates/separ-api",
    "crates/separ-server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Yekta Team"]
repository = "https://github.com/separ/separ"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "migrate", "tls-rustls"] }

# SpiceDB / gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
prost-types = "0.13"

# Authentication
jsonwebtoken = "9"
oauth2 = "4"
openidconnect = "4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait = "0.1"
futures = "0.3"
dashmap = "6"
once_cell = "1"
config = "0.15"
dotenvy = "0.15"
url = { version = "2", features = ["serde"] }
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
argon2 = "0.5"
secrecy = { version = "0.10", features = ["serde"] }

# URL encoding
urlencoding = "2"

# Internal crates
separ-core = { path = "crates/separ-core" }
separ-spicedb = { path = "crates/separ-spicedb" }
separ-db = { path = "crates/separ-db" }
separ-sync = { path = "crates/separ-sync" }
separ-oauth = { path = "crates/separ-oauth" }
separ-identity = { path = "crates/separ-identity" }
separ-proxy = { path = "crates/separ-proxy" }
separ-api = { path = "crates/separ-api" }

# Pin home crate to avoid edition2024 requirement (affects sqlx-postgres)
home = "0.5.9"

