[package]
name = "separ-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
separ-core = { workspace = true }
separ-db = { workspace = true }
separ-spicedb = { workspace = true }
separ-oauth = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
