[package]
name = "separ-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
separ-core = { workspace = true }
separ-db = { workspace = true }
separ-spicedb = { workspace = true }
separ-oauth = { workspace = true }

axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
base64 = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
sha2 = { workspace = true }
hex = "0.4"

# Rate limiting
governor = { workspace = true }
tower_governor = { workspace = true }# Caching for permission checks
moka = { workspace = true }

# Request ID tracing
http = { workspace = true }

# Input validation
regex = "1"
once_cell = "1"

# Azure SSO token validation
reqwest = { version = "0.12", features = ["json"] }
jsonwebtoken = { workspace = true }
