[package]
name = "separ-db"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
separ-core = { workspace = true }

# Use runtime-checked queries (no DATABASE_URL required at compile time)
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "tls-rustls"] }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# API key hashing
sha2 = { workspace = true }
hex = "0.4"
rand = { workspace = true }

# Encryption for storage connection credentials
aes-gcm = "0.10"
