[package]
name = "separ-proxy"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Authentication proxy for PostgreSQL wire protocol with multi-provider support"

[dependencies]
separ-core = { workspace = true }
separ-identity = { path = "../separ-identity" }

# Async runtime
tokio = { workspace = true, features = ["net", "io-util", "macros"] }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication
jsonwebtoken = { workspace = true }

# Utilities
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
bytes = "1"

# PostgreSQL wire protocol
md5 = "0.8"
sha2 = "0.10"
hmac = "0.12"
scram = "0.5"

# Connection pooling
dashmap = { workspace = true }

# Random number generation
rand = "0.8"

