[package]
name = "separ-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "separ"
path = "src/main.rs"

[dependencies]
separ-api = { workspace = true }
separ-core = { workspace = true }
separ-db = { workspace = true }
separ-spicedb = { workspace = true }
separ-oauth = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
anyhow = "1"
