[package]
name = "separ-spicedb"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tonic-build = "0.14"

[dependencies]
separ-core = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
