[package]
name = "separ-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
separ-core = { workspace = true }
separ-db = { workspace = true }
separ-spicedb = { workspace = true }

tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
sha2 = "0.10"
hmac = "0.12"
